# moal-ai

./: .dockerignore  .env.example  .env.production.template  .gitignore  .mcp.json  .pre-commit-config.yaml  PIVOT_PLAN.md  README.md  aegis_walkthrough.md  docker-compose.yml  pyproject.toml
.codex/: config.toml
.github/: CODEOWNERS
aegis-dotnet/: AegisClient.cs  WebSocketClient.cs
aegis-js/: package-lock.json  package.json  tsconfig.json
aegis-python/: __init__.py  client.py  models.py  ws.py
backend/: Dockerfile.migrations  alembic.ini  requirements-dev.txt
backend/libs/common/: pyproject.toml
backend/libs/common/moal_common/: __init__.py  config.py  connector_abstractions.py  messaging.py  platform_schema.py  schemas.py  schemas_v2.py  security.py
backend/libs/common/risk_common/: config.py  connector_abstractions.py  logging.py  messaging.py  platform_schema.py  schemas.py  schemas_v2.py  security.py
docs/: architecture.md  comprehensive_kt_guide.md  engineering.architecture-validation.md  engineering.audit.pr1-ci-baseline.md  engineering.codebase-analysis.md  engineering.folder-structure.md  engineering.mcp-jcodemunch.md  engineering.naming-audit.md  engineering.naming-convention.md  engineering.phase-01.diff-summary.md  engineering.phase-02.diff-summary.md  engineering.phase-03.diff-summary.md  engineering.phase-04.diff-summary.md  engineering.phase-05.diff-summary.md  engineering.phase-06.diff-summary.md  engineering.production-upgrade-plan.md  engineering.project-access-guide.md  engineering.refactor-diff-summary.md  engineering.removed-files.md  (+9 more)
(+517 files in other folders)
